<resources>
    <string name="app_name">Fish Compatibility</string>
    <string name="compare_fish_button">Compare Fish</string>
    <string name="virtual_tank_button">Virtual Tank</string>
    <string name="search_fish_button">Search Fish</string>
    <string name="search_diseases_button">Search Diseases</string>
    <string name="logo_content_desc">Logo for Fish Compatibility</string>
    <string name="home_button">Home</string>
    <string name="search_fish_page_title">Search Fish</string>
    <string name="search_disease_page_title">Search Diseases</string>
    <string name="search_placeholder">Enter text here</string>
    <string name="fish_view_name">Fish name</string>
    <string name="sci_name">Scientific name</string>
    <string name="alias">Alias</string>
    <string name="temp">Temperature</string>
    <string name="acidity">Acidity</string>
    <string name="gen_hard">General hardness</string>
    <string name="carb_hard">Carbonate hardness</string>
    <string name="vore">Vore</string>
    <string name="food_type">Food type</string>
    <string name="avg_size">Average size</string>
    <string name="life_exp">Life expectancy</string>
    <string name="curr">Water current</string>
    <string name="substrate">Substrate</string>
    <string name="swim_lvl">Where it swims</string>
    <string name="pop">Population</string>
    <string name="fin_nipper">Fin nipper?</string>
    <string name="aggressive">Aggressive?</string>
    <string name="symptoms">Symptoms</string>
    <string name="causes">Causes</string>
    <string name="treatments">Treatments</string>
    <string name="prevention">Prevention</string>
    <string name="compare_title">Compare Fish</string>
    <string name="compare_instructions">Select two fish to check if they are compatible:</string>
    <string name="select_placeholder">Select a fish…</string>
    <string name="tank_title">Virtual Tank</string>
    <string name="select_instructions">Select a fish to add to the virtual tank: </string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="fish_added">Fish already added</string>
    <string name="fish_compat">All fish are compatible</string>
    <string name="clear_button">Clear</string>
</resources>