<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fishImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/gourami" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fishName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fish_view_name" />

            <TextView
                android:id="@+id/scientificName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sci_name"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/alias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alias" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>